fixed price align

--- a/src/index.css
+++ b/src/index.css
@@ -735,11 +735,6 @@ a {
   box-shadow: 0 2px 8px rgba(230, 57, 70, 0.4);
 }
 
-/* @media (max-width: 1392px) {
-  .badge-sale-hide {
-    display: none !important;
-  }
-} */
 
 
 /* search page style per order e filter */
@@ -872,4 +867,10 @@ a {
   padding: 2px 6px;
   font-size: 10px;
   font-weight: bold;
+}
+
+/* WISHLIST */
+
+.price-align {
+  margin-bottom: 0 !important;
 }
